--- a/src/404.html
+++ b/src/404.html
@@ -20,7 +20,8 @@
 
 
 <div class="s-404">
-<h1>Erreur 404 cete page n'existe pas :(</h1>
+<h1>Erreur 404 cette page n'existe pas :(</h1>
+    <p>changement</p>
 </div>
 
 
