base-test finale

--- a/src/404.html
+++ b/src/404.html
@@ -20,8 +20,7 @@
 
 
 <div class="s-404">
-<h1>Erreur 404 cette page n'existe pas :(</h1>
-</div>
+<h1>Erreur 404 désolé cette page n'existe pas :(</h1></div>
 
 
 <footer>
