--- a/src/front-page.html
+++ b/src/front-page.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Overpass:wght@300;400;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+          rel="stylesheet">
+
     <title>Acceuil</title>
 
     <link href="css/main.css" rel="stylesheet">
 
     <script src="js/script.js"></script>
-
-
-
 </head>
 <body>
 
 <header class="header-page">
-    <h1>Acceuil</h1>
+
 </header>
 
 <section class="hero">
