--- a/src/contact.html
+++ b/src/contact.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     <title>Title</title>
+
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap" rel="stylesheet">
+
+    <script src="js/script.js"></script>
+
 </head>
 <body>
+
+    <h1 class="titre-contact">Mettons-nous en <span>Contact</span></h1>
+
+
 
 </body>
 </html>
