--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Acceuil - Index</title>
+    <title>Acceuil</title>
 
     <link href="css/main.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap" rel="stylesheet">
+
     <script src="js/script.js"></script>
-
-
 
 </head>
 <body>
@@ -38,18 +39,14 @@
 </header>
 
 <section class="hero">
-    <div>
-        <h1></h1>
-
+    <div class="banderolle">
+        <h1>Cédric Ménard</h1>
+        <p>Développeur <span class="texte-alt-color">&</span>
+            Créateur média</p>
+        <button type="button">Voir mes projets</button>
     </div>
 </section>
 
-
-
-
-<footer>
-
-</footer>
 
 </body>
 </html>
