debut + avance menu hamburger full weight

--- a/src/index.html
+++ b/src/index.html
@@ -13,30 +13,33 @@
 
     <script src="js/script.js"></script>
 
+
 </head>
 <body>
 
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
-        <div id="myNav" class="overlay">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">-</a>
-            <div class="overlay-contenu">
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeMenu">-</a>
                 <a href="#">Acceuil</a>
                 <a href="#">Projets</a>
                 <a href="#">À propos</a>
                 <a href="#">Contact</a>
-            </div>
         </div>
 
         <!-- fix-navbar -->
         <div class="navbar">
             <a href="#nom">Cédric Ménard</a>
-            <span style="font-size:75px;cursor:pointer" onclick="openNav()">+</span>
+            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
 
     </nav>
 </header>
+
+<video id="Demo-video">
+    <source src="" type="video/mp4">
+</video>
 
 <section class="hero">
     <div class="banderolle">
