--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,12 @@
     </nav>
 </header>
 
-<video id="Demo-video">
-    <source src="" type="video/mp4">
-</video>
+<section class="video-demo-bg">
+    <video playsinline autoplay muted loop poster="images/demo-placeholder.jpg" id="bgvideo">
+        <source src="images/demo.mp4" type="video/mp4">
+    </video>
+</section>
+
 
 <section class="hero">
     <div class="banderolle">
