debut html page contact + fin side-nav

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Title</title>
+    <title>Projets</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -13,12 +13,43 @@
 
     <script src="js/script.js"></script>
 
+
 </head>
 <body>
 
-    <h1 class="titre-contact">Mettons-nous en <span>Contact</span></h1>
+<header class="header-page">
+    <nav>
+        <!-- nav-hamburger -->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeMenu">-</a>
+            <a href="index.html">&#8226;	Acceuil</a>
+            <a href="singles.html">&#8226;	Projets</a>
+            <a href="a-propos.html">&#8226;	À propos</a>
+            <a href="contact.html">&#8226;	Contact</a>
+        </div>
+
+        <!-- fix-navbar -->
+        <div class="navbar">
+            <a href="#nom">Cédric Ménard</a>
+            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
+        </div>
+
+    </nav>
+</header>
+    <section class="contact">
+    <h1 class="titre-contact">Mettons-nous en <span class="texte-alt-color">Contact</span></h1>
+
+    <div class="info-contact">
+        <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span> </h2>
+        <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
+        <button type="button">Voir mon CV</button>
+        <div class="sociaux"></div>
+    </div>
+    <div class="formulaire-contact">
+        <form action=""></form>
+    </div>
 
 
-
+    </section>
 </body>
 </html>
