--- a/src/singles.html
+++ b/src/singles.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Projets</title>
+
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap" rel="stylesheet">
+
+    <script src="js/script.js"></script>
+
+
 </head>
 <body>
+
+<header class="header-page">
+    <nav>
+        <!-- nav-hamburger -->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeMenu">-</a>
+            <a href="index.html">&#8226;	Acceuil</a>
+            <a href="singles.html">&#8226;	Projets</a>
+            <a href="a-propos.html">&#8226;	À propos</a>
+            <a href="contact.html">&#8226;	Contact</a>
+        </div>
+
+        <!-- fix-navbar -->
+        <div class="navbar">
+            <a href="#nom">Cédric Ménard</a>
+            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
+        </div>
+
+    </nav>
+</header>
+
+
+
+
 
 </body>
 </html>
