--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
         <!-- nav-hamburger -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeMenu">-</a>
-                <a href="#">Acceuil</a>
-                <a href="#">Projets</a>
-                <a href="#">À propos</a>
-                <a href="#">Contact</a>
+            <a href="index.html">&#8226;	Acceuil</a>
+            <a href="singles.html">&#8226;	Projets</a>
+            <a href="a-propos.html">&#8226;	À propos</a>
+            <a href="contact.html">&#8226;	Contact</a>
         </div>
 
         <!-- fix-navbar -->
