--- a/src/contact.html
+++ b/src/contact.html
@@ -9,8 +9,16 @@
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap"
+          rel="stylesheet">
 
+    <!-- FontAwesome -->
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
+
+    <!-- Script -->
     <script src="js/script.js"></script>
 
 
@@ -20,12 +28,12 @@
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226;	Acceuil</a>
-            <a href="singles.html">&#8226;	Projets</a>
-            <a href="a-propos.html">&#8226;	À propos</a>
-            <a href="contact.html">&#8226;	Contact</a>
+        <div class="sidenav" id="mySidenav">
+            <a class="closeMenu" href="javascript:void(0)">-</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
         </div>
 
         <!-- fix-navbar -->
@@ -36,20 +44,33 @@
 
     </nav>
 </header>
-    <section class="contact">
+<section class="contact">
     <h1 class="titre-contact">Mettons-nous en <span class="texte-alt-color">Contact</span></h1>
+    <div class="grid-contact">
+        <div class="info-contact">
+            <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span></h2>
+            <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
+            <button type="button">Voir mon CV</button>
+            <div class="sociaux">
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-youtube-square"></i>
+                <i class="fab fa-github-square"></i>
+            </div>
+        </div>
+        <div class="formulaire-contact">
+            <label for="fnom">Nom</label>
+            <input type="text" id="fnom" name="nom" placeholder="Nom">
 
-    <div class="info-contact">
-        <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span> </h2>
-        <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
-        <button type="button">Voir mon CV</button>
-        <div class="sociaux"></div>
+            <label for="fmail">Nom</label>
+            <input type="text" id="fmail" name="mail" placeholder="Courriel">
+
+            <textarea id="Sujet" name="Sujet" placeholder="Sujet" style="height:200px"></textarea>
+        </div>
+
     </div>
-    <div class="formulaire-contact">
-        <form action=""></form>
-    </div>
-
-
-    </section>
+</section>
+<footer>
+    <p>© Tous droit réservé à Cédric Ménard</p>
+</footer>
 </body>
 </html>
