--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Acceuil</title>
+    <title>Projets</title>
 
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap"
+          rel="stylesheet">
 
+    <!-- FontAwesome -->
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
+
+    <!-- Script -->
     <script src="js/script.js"></script>
 
 
@@ -52,6 +60,10 @@
         <button type="button">Voir mes projets</button>
     </div>
 </section>
+
+<footer>
+    <p>© Tous droit réservé à Cédric Ménard</p>
+</footer>
 
 
 </body>
