Ajout d'images + debut page liste des projets

--- a/src/singles.html
+++ b/src/singles.html
@@ -45,9 +45,29 @@
     </nav>
 </header>
 
+    <h1 class="titre-projets">Projets</h1>
 
+<section class="projets">
+    <div class="projet-1">
+        <div class="bulle">
+            <p>Touch Designer | Jeu</p>
+            <h2>Course Lumière</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+        <img src="images/mockup-projet-1.png" alt="course-grille-lumière">
+        </div>
 
+    <div class="projet-2">
+        <div class="bulle">
+            <p>Touch Designer | Jeu</p>
+            <h2>Course Lumière</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+        <img src="images/mockup-projet-1.png" alt="course-grille-lumière">
+    </div>
 
-
+</section>
 </body>
 </html>
