--- a/src/contact.html
+++ b/src/contact.html
@@ -52,16 +52,16 @@
             <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
             <button type="button">Voir mon CV</button>
             <div class="sociaux">
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-youtube-square"></i>
-                <i class="fab fa-github-square"></i>
+                <a href="https://www.linkedin.com/in/c%C3%A9dric-m%C3%A9nard-40ab621a8/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.youtube.com/channel/UC4ELHn9lArnMBaZl6ErUjHg/" target="_blank"><i class="fab fa-youtube-square"></i></a>
+                <a href="https://github.com/CedricMen" target="_blank"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
         <div class="formulaire-contact">
-            <label for="fnom">Nom</label>
+            <label for="fnom"></label>
             <input type="text" id="fnom" name="nom" placeholder="Nom">
 
-            <label for="fmail">Nom</label>
+            <label for="fmail"></label>
             <input type="text" id="fmail" name="mail" placeholder="Courriel">
 
             <textarea id="Sujet" name="Sujet" placeholder="Sujet" style="height:200px"></textarea>
