debut page a propos + scss page a propos + fix acceuil demo video

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projets</title>
+    <title>à-propos</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -30,10 +30,10 @@
         <!-- nav-hamburger -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226;	Acceuil</a>
-            <a href="singles.html">&#8226;	Projets</a>
-            <a href="a-propos.html">&#8226;	À propos</a>
-            <a href="contact.html">&#8226;	Contact</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
         </div>
 
         <!-- fix-navbar -->
@@ -44,6 +44,51 @@
 
     </nav>
 </header>
+
+<h1 class="titre-page">À propos</h1>
+
+<section class="a-propos">
+
+    <div class="a-propos-sideA">
+        <div class="texte-propos">
+            <p><span class="texte-alt-color">Prêt au poste!</span></p>
+            <p>Je suis toujours ouvert pour apprendre de nouvelles choses et j’aime mettre ma touche personnelle à tous
+                projets. </p>
+            <p>Mon côté <span class="texte-alt-color">pragmatique</span> et <span
+                    class="texte-alt-color">polyvalent</span> n’équivaut que mon envie d'accroître constamment mes
+                connaissances dans les
+                domaines suivant :</p>
+            <ul>
+                <li>Développement Front-End</li>
+                <li>Utilisation de Cms et Développement Back-End</li>
+                <li>Création d’expérience intéractive</li>
+                <li>Prototypage</li>
+                <li>Modélisation/Animation 3D</li>
+            </ul>
+        </div>
+    </div>
+        <div class="a-propos-sideB">
+            <a href="" id="survole-qualite">
+            <div class="photo-cercle">
+                <img src="images/photo-a-propos.png" alt="photo-de-cedric-menard">
+            </div>
+            </a>
+            <div id="bulle-qualite">
+            <div class="qualite-1"><p>Organisé</p></div>
+            <div class="qualite-2"><p>Pragmatique</p></div>
+            <div class="qualite-3"><p>Polyvalent</p></div>
+            </div>
+        </div>
+</section>
+
+<section class="competences">
+
+</section>
+
+<section class="interets">
+
+</section>
+
 
 </body>
 </html>
