--- a/src/contact.html
+++ b/src/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projets</title>
+    <title>Contact</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -28,12 +28,12 @@
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
-        <div class="sidenav" id="mySidenav">
-            <a class="closeMenu" href="javascript:void(0)">-</a>
-            <a href="index.html">&#8226; Acceuil</a>
-            <a href="singles.html">&#8226; Projets</a>
-            <a href="a-propos.html">&#8226; À propos</a>
-            <a href="contact.html">&#8226; Contact</a>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeMenu">-</a>
+            <a href="index.html">&#8226;	Acceuil</a>
+            <a href="singles.html">&#8226;	Projets</a>
+            <a href="a-propos.html">&#8226;	À propos</a>
+            <a href="contact.html">&#8226;	Contact</a>
         </div>
 
         <!-- fix-navbar -->
@@ -44,8 +44,10 @@
 
     </nav>
 </header>
+
+<h1 class="titre-page">Mettons-nous en <span class="texte-alt-color">Contact</span></h1>
+
 <section class="contact">
-    <h1 class="titre-contact">Mettons-nous en <span class="texte-alt-color">Contact</span></h1>
     <div class="grid-contact">
         <div class="info-contact">
             <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span></h2>
