--- a/src/singles.html
+++ b/src/singles.html
@@ -45,7 +45,7 @@
     </nav>
 </header>
 
-    <h1 class="titre-projets">Projets</h1>
+    <h1 class="titre-page">Projets</h1>
 
 <section class="projets">
     <div class="projet-1">
