--- a/src/404.html
+++ b/src/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projets</title>
+    <title>404</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -25,9 +25,24 @@
 </head>
 <body>
 
-
 <header class="header-page">
+    <nav>
+        <!-- nav-hamburger -->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closeMenu">-</a>
+            <a href="index.html">&#8226;	Acceuil</a>
+            <a href="singles.html">&#8226;	Projets</a>
+            <a href="a-propos.html">&#8226;	À propos</a>
+            <a href="contact.html">&#8226;	Contact</a>
+        </div>
 
+        <!-- fix-navbar -->
+        <div class="navbar">
+            <a href="#nom">Cédric Ménard</a>
+            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
+        </div>
+
+    </nav>
 </header>
 
 
