--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projets</title>
+    <title>Acceuil</title>
 
     <link href="css/main.css" rel="stylesheet">
 
