curseur personnalise + suite page a-propos

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-
+<div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
@@ -38,7 +38,7 @@
 
         <!-- fix-navbar -->
         <div class="navbar">
-            <a href="#nom">Cédric Ménard</a>
+            <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
 
@@ -67,28 +67,77 @@
             </ul>
         </div>
     </div>
-        <div class="a-propos-sideB">
-            <a href="" id="survole-qualite">
+    <div class="a-propos-sideB">
+        <a href="" id="survole-qualite">
             <div class="photo-cercle">
                 <img src="images/photo-a-propos.png" alt="photo-de-cedric-menard">
             </div>
-            </a>
-            <div id="bulle-qualite">
+        </a>
+        <div id="bulle-qualite">
             <div class="qualite-1"><p>Organisé</p></div>
             <div class="qualite-2"><p>Pragmatique</p></div>
             <div class="qualite-3"><p>Polyvalent</p></div>
-            </div>
         </div>
+    </div>
 </section>
 
 <section class="competences">
 
+    <h1 class="titre-page">Mes compétences</h1>
+    <div class="comp-grid">
+        <div class="comp-1">
+            <a href="">
+                <div class="img-comp-1"></div>
+            </a>
+            <p>Pour mes projets front-end, il me faut évidemment utiliser Webstorm pour faire du HTML/CSS pour créer un
+                code de qualité.</p>
+        </div>
+        <div class="comp-2">
+            <p>J’aime travailler avec Figma pour le prototypage et Photoshop pour traiter et importer les images que je
+                mets dans mes prototypes</p>
+            <a href="">
+                <div class="img-comp-2"></div>
+            </a>
+        </div>
+        <div class="comp-3">
+            <a href="">
+                <div class="img-comp-3"></div>
+            </a>
+            <p>Pour le Back-end j’utilise WordPress et PHP pour l’adaptation du HTML/CSS et l’utilisation d’acf et de
+                cpt</p>
+        </div>
+        <div class="comp-4">
+            <p>Pour créer des expériences interactives intéressantes, je me sers de Unity et Touch Designer</p>
+            <a href="">
+                <div class="img-comp-4"></div>
+            </a>
+        </div>
+    </div>
 </section>
 
 <section class="interets">
-
+    <h1 class="titre-page">Mes Intérêts</h1>
+    <div class="interet-grid">
+        <div class="texte-interet">
+            <p>Je suis professionnellement et personnellement multidisciplinaire, je fais de l’escalade, je suis
+                cinéphile,
+                mélomane, gamer et artiste. Malgré mon côté développeur, j’aime faire dans mon temps libre de la 3D dans
+                Blender et du montage vidéo et sonore avec Premiere et Audition.
+            </p>
+            <p>La musique joue un rôle important dans ma vie, surtout celle des années 70s et 80s. Il est rare de me
+                voir
+                sans écouteurs quand je travaille. C’est ma source d’inspiration et l’essence qui me rend productifs et
+                créatifs</p>
+        </div>
+            <div>
+                <div class="img-interets"></div>
+                <div class="img-interets-1"></div>
+                <div class="img-interets-2"></div>
+                <div class="img-interets-3"></div>
+                <div class="img-interets-4"></div>
+            </div>
+    </div>
 </section>
-
 
 </body>
 </html>
