--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-
+<div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
@@ -38,7 +38,7 @@
 
         <!-- fix-navbar -->
         <div class="navbar">
-            <a href="#nom">Cédric Ménard</a>
+            <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
 
@@ -57,7 +57,7 @@
         <h1>Cédric Ménard</h1>
         <p>Développeur <span class="texte-alt-color">&</span>
             Créateur média</p>
-        <button type="button">Voir mes projets</button>
+        <a href="singles.html"><button type="button">Voir mes projets</button></a>
     </div>
 </section>
 
