--- a/src/singles.html
+++ b/src/singles.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-
+<div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
@@ -38,7 +38,7 @@
 
         <!-- fix-navbar -->
         <div class="navbar">
-            <a href="#nom">Cédric Ménard</a>
+            <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
 
