--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -89,11 +89,15 @@
             <a href="">
                 <div class="img-comp-1"></div>
             </a>
-            <p>Pour mes projets front-end, il me faut évidemment utiliser Webstorm pour faire du HTML/CSS pour créer un
+            <p>Pour mes projets <span class="texte-alt2-color">front-end</span>, il me faut évidemment utiliser <span
+                    class="texte-alt2-color">Webstorm</span> pour faire du <span
+                    class="texte-alt2-color">HTML/CSS</span> pour créer un
                 code de qualité.</p>
         </div>
         <div class="comp-2">
-            <p>J’aime travailler avec Figma pour le prototypage et Photoshop pour traiter et importer les images que je
+            <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
+                    class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
+                traiter et importer les images que je
                 mets dans mes prototypes</p>
             <a href="">
                 <div class="img-comp-2"></div>
@@ -103,8 +107,8 @@
             <a href="">
                 <div class="img-comp-3"></div>
             </a>
-            <p>Pour le Back-end j’utilise WordPress et PHP pour l’adaptation du HTML/CSS et l’utilisation d’acf et de
-                cpt</p>
+            <p>Pour le <span class="texte-alt2-color">Back-end</span> j’utilise <span class="texte-alt2-color">WordPress</span> et PHP pour l’adaptation du HTML/CSS et l’utilisation d’<span class="texte-alt2-color">ACF</span> et de
+                <span class="texte-alt2-color">CPT</span></p>
         </div>
         <div class="comp-4">
             <p>Pour créer des expériences interactives intéressantes, je me sers de Unity et Touch Designer</p>
