navbar fix the fixed + suite a propos

--- a/src/404.html
+++ b/src/404.html
@@ -30,15 +30,15 @@
         <!-- nav-hamburger -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226;	Acceuil</a>
-            <a href="singles.html">&#8226;	Projets</a>
-            <a href="a-propos.html">&#8226;	À propos</a>
-            <a href="contact.html">&#8226;	Contact</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
         </div>
 
         <!-- fix-navbar -->
-        <div class="navbar">
-            <a href="#nom">Cédric Ménard</a>
+        <div class="navbar" id="navbar">
+            <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
 
