--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>à-propos</title>
+    <title>À propos</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -36,8 +36,8 @@
             <a href="contact.html">&#8226; Contact</a>
         </div>
 
-        <!-- fix-navbar -->
-        <div class="navbar">
+        <!-- fix-navbar --><div class="navbar" id="navbar">
+
             <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
@@ -79,7 +79,14 @@
             <div class="qualite-3"><p>Polyvalent</p></div>
         </div>
     </div>
+
 </section>
+
+<div class="boiteSouris">
+    <div class="souris">
+        <div class="roue"></div>
+    </div>
+</div>
 
 <section class="competences">
 
@@ -133,8 +140,7 @@
                 sans écouteurs quand je travaille. C’est ma source d’inspiration et l’essence qui me rend productifs et
                 créatifs</p>
         </div>
-            <div>
-                <div class="img-interets"></div>
+            <div class="imgs-interets">
                 <div class="img-interets-1"></div>
                 <div class="img-interets-2"></div>
                 <div class="img-interets-3"></div>
@@ -142,6 +148,10 @@
             </div>
     </div>
 </section>
+
+<footer>
+    <p class="footer-apropos">© Tous droit réservé à Cédric Ménard</p>
+</footer>
 
 </body>
 </html>
