--- a/src/contact.html
+++ b/src/contact.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- fix-navbar -->
-        <div class="navbar">
+        <div class="navbar" id="navbar">
             <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
