--- a/src/index.html
+++ b/src/index.html
@@ -30,14 +30,14 @@
         <!-- nav-hamburger -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226;	Acceuil</a>
-            <a href="singles.html">&#8226;	Projets</a>
-            <a href="a-propos.html">&#8226;	À propos</a>
-            <a href="contact.html">&#8226;	Contact</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
         </div>
 
         <!-- fix-navbar -->
-        <div class="navbar">
+        <div class="navbar" id="navbar">
             <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
@@ -47,7 +47,7 @@
 
 <section class="video-demo-bg">
     <video playsinline autoplay muted loop poster="images/demo-placeholder.jpg" id="bgvideo">
-        <source src="images/demo.mp4" type="video/mp4">
+        <source src="../images/demo.mp4" type="video/mp4">
     </video>
 </section>
 
