avancement de la page des projets + optimisation des images + fix curseur

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -60,7 +60,7 @@
                 domaines suivant :</p>
             <ul>
                 <li>Développement Front-End</li>
-                <li>Utilisation de Cms et Développement Back-End</li>
+                <li>Utilisation de Cms et de PHP</li>
                 <li>Création d’expérience intéractive</li>
                 <li>Prototypage</li>
                 <li>Modélisation/Animation 3D</li>
@@ -70,7 +70,7 @@
     <div class="a-propos-sideB">
         <a href="" id="survole-qualite">
             <div class="photo-cercle">
-                <img src="images/photo-a-propos.png" alt="photo-de-cedric-menard">
+                <img alt="photo-de-cedric-menard" src="images/photo-a-propos.png">
             </div>
         </a>
         <div id="bulle-qualite">
@@ -104,7 +104,7 @@
         <div class="comp-2">
             <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
                     class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
-                traiter et importer les images que je
+                optimiser les images que je
                 mets dans mes prototypes</p>
             <a href="">
                 <div class="img-comp-2"></div>
@@ -114,11 +114,16 @@
             <a href="">
                 <div class="img-comp-3"></div>
             </a>
-            <p>Pour le <span class="texte-alt2-color">Back-end</span> j’utilise <span class="texte-alt2-color">WordPress</span> et PHP pour l’adaptation du HTML/CSS et l’utilisation d’<span class="texte-alt2-color">ACF</span> et de
+            <p>Pour le <span class="texte-alt2-color">Back-end</span> j’utilise <span
+                    class="texte-alt2-color">WordPress</span> et PHP pour l’adaptation du HTML/CSS et l’utilisation
+                d’<span class="texte-alt2-color">ACF</span> et de
                 <span class="texte-alt2-color">CPT</span></p>
         </div>
         <div class="comp-4">
-            <p>Pour créer des expériences interactives intéressantes, je me sers de Unity et Touch Designer</p>
+            <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
+                de <span
+                        class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
+                        class="texte-alt2-color">Touch Designer</span></p>
             <a href="">
                 <div class="img-comp-4"></div>
             </a>
@@ -130,22 +135,29 @@
     <h1 class="titre-page">Mes Intérêts</h1>
     <div class="interet-grid">
         <div class="texte-interet">
-            <p>Je suis professionnellement et personnellement multidisciplinaire, je fais de l’escalade, je suis
+            <p>Je suis professionnellement et personnellement <span class="texte-alt2-color">multidisciplinaire</span>,
+                je fais de l’escalade, je suis
                 cinéphile,
-                mélomane, gamer et artiste. Malgré mon côté développeur, j’aime faire dans mon temps libre de la 3D dans
-                Blender et du montage vidéo et sonore avec Premiere et Audition.
+                mélomane, gamer et artiste. Malgré mon côté développeur, j’aime faire dans mon temps libre de la <span
+                        class="texte-alt2-color">3D</span> dans
+                <span class="texte-alt2-color">Blender</span> et du montage <span class="texte-alt2-color">vidéo</span>
+                et <span class="texte-alt2-color">sonore</span> avec <span class="texte-alt2-color">Premiere</span> et
+                <span class="texte-alt2-color">Audition</span> .
             </p>
-            <p>La musique joue un rôle important dans ma vie, surtout celle des années 70s et 80s. Il est rare de me
+            <p>La <span class="texte-alt2-color">musique</span> joue un rôle important pour moi, surtout celle des
+                années <span class="texte-alt2-color">70s</span> et <span class="texte-alt2-color">80s</span>. Il est
+                rare de me
                 voir
-                sans écouteurs quand je travaille. C’est ma source d’inspiration et l’essence qui me rend productifs et
-                créatifs</p>
+                sans écouteurs quand je travaille. C’est ma source d’inspiration et l’essence qui me rend <span
+                        class="texte-alt2-color">productifs</span> et
+                <span class="texte-alt2-color">créatifs</span>.</p>
         </div>
-            <div class="imgs-interets">
-                <div class="img-interets-1"></div>
-                <div class="img-interets-2"></div>
-                <div class="img-interets-3"></div>
-                <div class="img-interets-4"></div>
-            </div>
+        <div class="imgs-interets">
+            <div class="img-interets-1"></div>
+            <div class="img-interets-2"></div>
+            <div class="img-interets-3"></div>
+            <div class="img-interets-4"></div>
+        </div>
     </div>
 </section>
 
