--- a/src/singles.html
+++ b/src/singles.html
@@ -48,26 +48,55 @@
     <h1 class="titre-page">Projets</h1>
 
 <section class="projets">
-    <div class="projet-1">
+    <div class="projet-a">
         <div class="bulle">
             <p>Touch Designer | Jeu</p>
             <h2>Course Lumière</h2>
             <p>Projet Scolaire</p>
             <button type="button">Voir le projet</button>
         </div>
-        <img src="images/mockup-projet-1.png" alt="course-grille-lumière">
-        </div>
-
-    <div class="projet-2">
-        <div class="bulle">
-            <p>Touch Designer | Jeu</p>
-            <h2>Course Lumière</h2>
-            <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
-        </div>
-        <img src="images/mockup-projet-1.png" alt="course-grille-lumière">
+        <a href=""><img src="images/mockup-projet-1.png" alt="course-grille-lumière"></a>
     </div>
 
+    <div class="projet-b">
+        <a href=""><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
+        <div class="bulle">
+            <p>WordPress | HTML/CSS/JS</p>
+            <h2>Refonte d’un Site</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+    </div>
+
+    <div class="projet-c">
+        <div class="bulle">
+            <p>Figma | Expérience Intéractive</p>
+            <h2>Verum</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+        <a href=""><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
+    </div>
+
+    <div class="projet-d">
+        <a href=""><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
+        <div class="bulle">
+            <p>WordPress | WooCommerce</p>
+            <h2>Site eCommerce</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+    </div>
+
+    <div class="projet-e">
+        <div class="bulle">
+            <p>Blender | Projection Mapping</p>
+            <h2>Grosse Citrouille</h2>
+            <p>Projet Scolaire</p>
+            <button type="button">Voir le projet</button>
+        </div>
+        <a href=""><img class="citrouille" src="images/mockup-projet-5.png" alt="film-citrouille"></a>
+    </div>
 </section>
 </body>
 </html>
