--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -24,6 +24,9 @@
 
 </head>
 <body>
+<div class="loader">
+    <img src="images/loading.gif" alt="chargement">
+</div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
@@ -36,8 +39,8 @@
             <a href="contact.html">&#8226; Contact</a>
         </div>
 
-        <!-- fix-navbar --><div class="navbar" id="navbar">
-
+        <!-- fix-navbar -->
+        <div class="navbar" id="navbar">
             <a href="index.html">Cédric Ménard</a>
             <span class="menu" style="font-size:65px;cursor:pointer">+</span>
         </div>
