--- a/src/contact.html
+++ b/src/contact.html
@@ -24,16 +24,19 @@
 
 </head>
 <body>
+<div class="loader">
+    <img src="images/loading.gif" alt="chargement">
+</div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeMenu">-</a>
-            <a href="index.html">&#8226;	Acceuil</a>
-            <a href="singles.html">&#8226;	Projets</a>
-            <a href="a-propos.html">&#8226;	À propos</a>
-            <a href="contact.html">&#8226;	Contact</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
         </div>
 
         <!-- fix-navbar -->
