--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
 
 </head>
 <body>
+<div class="loader">
+    <img src="images/loading.gif" alt="chargement">
+</div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
@@ -47,7 +50,7 @@
 
 <section class="video-demo-bg">
     <video playsinline autoplay muted loop poster="images/demo-placeholder.jpg" id="bgvideo">
-        <source src="../images/demo.mp4" type="video/mp4">
+        <source src="images/demo.mp4" type="video/mp4">
     </video>
 </section>
 
