--- a/src/singles.html
+++ b/src/singles.html
@@ -24,6 +24,9 @@
 
 </head>
 <body>
+<div class="loader">
+    <img src="images/loading.gif" alt="chargement">
+</div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
