scroll anim singles + sidebar custom

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -18,6 +18,8 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Script -->
     <script src="js/script.js"></script>
 
@@ -95,7 +97,9 @@
 
     <h1 class="titre-page">Mes compétences</h1>
     <div class="comp-grid">
-        <div class="comp-1">
+        <div data-aos="fade-right"
+             data-aos-offset="400"
+             data-aos-easing="ease-in-sine" class="comp-1">
             <a href="">
                 <div class="img-comp-1"></div>
             </a>
@@ -104,7 +108,9 @@
                     class="texte-alt2-color">HTML/CSS</span> pour créer un
                 code de qualité.</p>
         </div>
-        <div class="comp-2">
+        <div data-aos="fade-right"
+             data-aos-offset="400"
+             data-aos-easing="ease-in-sine"  class="comp-2">
             <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
                     class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
                 optimiser les images que je
@@ -113,7 +119,9 @@
                 <div class="img-comp-2"></div>
             </a>
         </div>
-        <div class="comp-3">
+        <div data-aos="fade-right"
+             data-aos-offset="400"
+             data-aos-easing="ease-in-sine" class="comp-3">
             <a href="">
                 <div class="img-comp-3"></div>
             </a>
@@ -122,7 +130,9 @@
                 d’<span class="texte-alt2-color">ACF</span> et de
                 <span class="texte-alt2-color">CPT</span></p>
         </div>
-        <div class="comp-4">
+        <div  data-aos="fade-right"
+              data-aos-offset="400"
+              data-aos-easing="ease-in-sine" class="comp-4">
             <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
                 de <span
                         class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
