--- a/src/singles.html
+++ b/src/singles.html
@@ -52,8 +52,10 @@
 
     <h1 class="titre-page">Projets</h1>
 <section class="projets">
-    <div data-aos="fade-up-left">
-    <div class="projet-a">
+
+    <div data-aos="fade-right"
+         data-aos-offset="400"
+         data-aos-easing="ease-in-sine" class="projet-a">
         <div class="bulle">
             <p>Touch Designer | Jeu</p>
             <h2>Course Lumière</h2>
@@ -62,8 +64,9 @@
         </div>
         <a href=""><img src="images/mockup-projet-1.png" alt="course-grille-lumière"></a>
     </div>
-    </div>
-    <div class="projet-b">
+    <div data-aos="fade-left"
+         data-aos-offset="400"
+         data-aos-easing="ease-in-sine"  class="projet-b">
         <div class="bulle">
             <p>WordPress | HTML/CSS/JS</p>
             <h2>Refonte d’un Site</h2>
@@ -73,7 +76,9 @@
         <a href=""><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
     </div>
 
-    <div class="projet-c">
+    <div data-aos="fade-right"
+         data-aos-offset="400"
+         data-aos-easing="ease-in-sine" class="projet-c">
         <div class="bulle">
             <p>Figma | Expérience Intéractive</p>
             <h2>Verum</h2>
@@ -83,7 +88,9 @@
         <a href=""><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
     </div>
 
-    <div class="projet-d">
+    <div data-aos="fade-left"
+         data-aos-offset="400"
+         data-aos-easing="ease-in-sine" class="projet-d">
         <div class="bulle">
             <p>WordPress | WooCommerce</p>
             <h2>Site eCommerce</h2>
@@ -93,7 +100,9 @@
         <a href=""><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
     </div>
 
-    <div class="projet-e">
+    <div data-aos="fade-right"
+         data-aos-offset="400"
+         data-aos-easing="ease-in-sine" class="projet-e">
         <div class="bulle">
             <p>Blender | Projection Mapping</p>
             <h2>Grosse Citrouille</h2>
