a-propos new header

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -18,7 +18,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
     <script src="js/script.js"></script>
@@ -27,14 +27,14 @@
 </head>
 <body>
 <div class="loader">
-    <img src="images/loading.gif" alt="chargement">
+    <img alt="chargement" src="images/loading.gif">
 </div>
 <div class="cursor"></div>
 <header class="header-page">
     <nav>
         <!-- nav-hamburger -->
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closeMenu">-</a>
+        <div class="sidenav" id="mySidenav">
+            <a class="closeMenu" href="javascript:void(0)">-</a>
             <a href="index.html">&#8226; Acceuil</a>
             <a href="singles.html">&#8226; Projets</a>
             <a href="a-propos.html">&#8226; À propos</a>
@@ -97,7 +97,7 @@
 
     <h1 class="titre-page">Mes compétences</h1>
     <div class="comp-grid">
-        <div  data-aos="fade-right" class="comp-1">
+        <div class="comp-1">
             <a href="">
                 <div class="img-comp-1"></div>
             </a>
