page course-lumiere et ajouts des images single

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -97,7 +97,8 @@
 
     <h1 class="titre-page">Mes compétences</h1>
     <div class="comp-grid">
-        <div class="comp-1">
+        <div data-aos="zoom-in-right"
+             data-aos-offset="400" class="comp-1">
             <a href="">
                 <div class="img-comp-1"></div>
             </a>
@@ -106,7 +107,8 @@
                     class="texte-alt2-color">HTML/CSS</span> pour créer un
                 code de qualité.</p>
         </div>
-        <div class="comp-2">
+        <div data-aos="zoom-in-right"
+             data-aos-offset="400"  class="comp-2">
             <p>J’aime travailler avec <span class="texte-alt2-color">Figma</span> pour le <span
                     class="texte-alt2-color">prototypage</span> et <span class="texte-alt2-color">Photoshop</span> pour
                 optimiser les images que je
@@ -115,7 +117,8 @@
                 <div class="img-comp-2"></div>
             </a>
         </div>
-        <div class="comp-3">
+        <div data-aos="zoom-in-right"
+             data-aos-offset="400"  class="comp-3">
             <a href="">
                 <div class="img-comp-3"></div>
             </a>
@@ -124,7 +127,8 @@
                 d’<span class="texte-alt2-color">ACF</span> et de
                 <span class="texte-alt2-color">CPT</span></p>
         </div>
-        <div class="comp-4">
+        <div data-aos="zoom-in-right"
+             data-aos-offset="400"  class="comp-4">
             <p>Pour créer des <span class="texte-alt2-color">expériences</span> interactives intéressantes, je me sers
                 de <span
                         class="texte-alt2-color">Unity</span>, <span class="texte-alt2-color">Blender</span> et <span
@@ -139,7 +143,8 @@
 <section class="interets">
     <h1 class="titre-page">Mes Intérêts</h1>
     <div class="interet-grid">
-        <div class="texte-interet">
+        <div  data-aos="fade-up"
+              data-aos-duration="3000"  class="texte-interet">
             <p>Je suis professionnellement et personnellement <span class="texte-alt2-color">multidisciplinaire</span>,
                 je fais de l’escalade, je suis
                 cinéphile,
@@ -157,7 +162,8 @@
                         class="texte-alt2-color">productifs</span> et
                 <span class="texte-alt2-color">créatifs</span>.</p>
         </div>
-        <div class="imgs-interets">
+        <div data-aos="fade-up"
+             data-aos-duration="4000" class="imgs-interets">
             <div class="img-interets-1"></div>
             <div class="img-interets-2"></div>
             <div class="img-interets-3"></div>
@@ -169,6 +175,9 @@
 <footer>
     <p class="footer-apropos">© Tous droit réservé à Cédric Ménard</p>
 </footer>
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
