--- a/src/singles.html
+++ b/src/singles.html
@@ -60,7 +60,7 @@
             <p>Touch Designer | Jeu</p>
             <h2>Course Lumière</h2>
             <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
+            <a href="course-lumiere.html"><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-1.png" alt="course-grille-lumière"></a>
     </div>
@@ -71,7 +71,7 @@
             <p>WordPress | HTML/CSS/JS</p>
             <h2>Refonte d’un Site</h2>
             <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
+            <a href=""><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
     </div>
@@ -83,7 +83,7 @@
             <p>Figma | Expérience Intéractive</p>
             <h2>Verum</h2>
             <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
+            <a href=""><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
     </div>
@@ -95,7 +95,7 @@
             <p>WordPress | WooCommerce</p>
             <h2>Site eCommerce</h2>
             <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
+            <a href=""><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
     </div>
@@ -107,7 +107,7 @@
             <p>Blender | Projection Mapping</p>
             <h2>Grosse Citrouille</h2>
             <p>Projet Scolaire</p>
-            <button type="button">Voir le projet</button>
+            <a href=""><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img class="citrouille" src="images/mockup-projet-5.png" alt="film-citrouille"></a>
     </div>
