--- a/src/course-lumiere.html
+++ b/src/course-lumiere.html
@@ -100,7 +100,7 @@
          data-aos-duration="1000" class="course-demo">
     <h1>Video Demo</h1>
     <video playsinline autoplay muted loop poster="images/demo-placeholder.jpg">
-        <source src="images/course-demo.mp4" type="video/mp4">
+       <!-- <source src="images/" type="video/mp4"> --->
     </video>
 </section>
 
